bk_ida/gccida/c0/expand_nl_goto_receiver
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/stmt.c:4018:18: error: expected ')'
 struct rtx_def *arg_pointer_save_area; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/function.h:533:36: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/stmt.c:4018:18: note: to match this '('
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/function.h:533:31: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/stmt.c:4026:27: error: use of undeclared identifier 'expand_nl_goto_receiver_elim_regs'
for ( i = 0LL; i < 4 && ( expand_nl_goto_receiver_elim_regs[i].from != 16 || *(int *)0x896344[2 * i] != 6); ++i ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/stmt.c:4026:94: error: subscripted value is not an array, pointer, or vector
for ( i = 0LL; i < 4 && ( expand_nl_goto_receiver_elim_regs[i].from != 16 || *(int *)0x896344[2 * i] != 6); ++i ) 
                                                                                     ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/stmt.c:4031:1: error: no member named 'x_arg_pointer_save_area' in 'struct rtx_def'
arg_pointer_save_area = get_arg_pointer_save_area( cfun); 
^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/function.h:533:38: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                               ~~~~  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/stmt.c:4032:19: error: no member named 'x_arg_pointer_save_area' in 'struct rtx_def'
v1 = copy_to_reg( arg_pointer_save_area); 
                  ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/function.h:533:38: note: expanded from macro 'arg_pointer_save_area'
#define arg_pointer_save_area (cfun->x_arg_pointer_save_area)
                               ~~~~  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_nl_goto_receiver/src/obj/stmt.o] Error 1
